--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"react-bootstrap": "^1.0.0-beta.16",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
-		"react-scripts": "3.3.0"
+		"react-scripts": "3.3.0",
+		"redux": "^4.0.4",
+		"redux-actions": "^2.6.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
